Perhaps fix build issues with Scala?